--- a/RestaurantReviews/Views/Reviews/Details.cshtml
+++ b/RestaurantReviews/Views/Reviews/Details.cshtml
@@ -4,12 +4,28 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h2 class="post-title">@Html.DisplayFor(model => model.Name)</h2>
 
 <div>
-    <h4>Review</h4>
+   <h3 class="post-subtitle" style="font-weight:300">@Html.DisplayFor(model => model.Bullet)</h3>
+   <h5>Rating: @Html.DisplayFor(model => model.Rating) / 4</h5>
+   <h5>Price: @Html.DisplayFor(model => model.Price) / 4</h5>
     <hr />
-    <dl class="row">
+
+            <article class="mb-4">
+            <div class="">
+                <div class="justify-content-center">
+                    <div class="">
+                        <p>@Html.DisplayFor(model => model.Text)</p>
+                        </div>
+                        </div>
+                        </div>
+                        </article>
+
+
+
+
+ @*    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -52,9 +68,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CreatedDate)
         </dd>
-    </dl>
+    </dl>*@
 </div>
-<div>
+@*<div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
