--- a/RestaurantReviews/wwwroot/css/styles.css
+++ b/RestaurantReviews/wwwroot/css/styles.css
@@ -11060,59 +11060,87 @@ blockquote {
   letter-spacing: 0.0625em;
   text-transform: uppercase;
 }
-@media (min-width: 992px) {
-  #mainNav {
-    border-bottom: 1px solid transparent;
-    background: transparent;
-  }
-  #mainNav .navbar-brand {
-    color: #fff;
-  }
-  #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-    color: rgba(255, 255, 255, 0.8);
-  }
-  #mainNav .navbar-nav > li.nav-item > a.nav-link {
-    color: #fff;
-  }
-  #mainNav .navbar-nav > li.nav-item > a.nav-link:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link:hover {
-    color: rgba(255, 255, 255, 0.8);
-  }
-}
-@media (min-width: 992px) {
-  #mainNav {
-    transition: background-color 0.2s;
-    /* Force Hardware Acceleration in WebKit */
-    transform: translate3d(0, 0, 0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  #mainNav.is-fixed {
-    /* when the user scrolls down, we hide the header right above the viewport */
-    position: fixed;
-    top: -83px;
-    transition: transform 0.2s;
-    border-bottom: 1px solid white;
-    background-color: rgba(255, 255, 255, 0.9);
-  }
-  #mainNav.is-fixed .navbar-brand {
-    color: #212529;
-  }
-  #mainNav.is-fixed .navbar-brand:focus, #mainNav.is-fixed .navbar-brand:hover {
-    color: #0085A1;
-  }
-  #mainNav.is-fixed .navbar-nav > li.nav-item > a {
-    color: #212529;
-  }
-  #mainNav.is-fixed .navbar-nav > li.nav-item > a:focus, #mainNav.is-fixed .navbar-nav > li.nav-item > a:hover {
-    color: #0085A1;
-  }
-  #mainNav.is-visible {
-    /* if the user changes the scrolling direction, we show the header */
-    transform: translate3d(0, 100%, 0);
-  }
+
+    #mainNav .navbar-nav > li.nav-item > button.btn {
+        font-size: 0.75rem;
+        font-weight: 800;
+        letter-spacing: 0.0625em;
+        text-transform: uppercase;
+    }
+
+.menu-fake-button {
+    font-size: 0.75rem;
+    font-weight: 800;
+    letter-spacing: 0.0625em;
+    text-transform: uppercase;
+    color:orangered;
 }
 
-footer {
+
+    @media (min-width: 992px) {
+        #mainNav {
+            border-bottom: 1px solid transparent;
+            background: transparent;
+        }
+
+            #mainNav .navbar-brand {
+                color: #fff;
+            }
+
+                #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
+                    color: rgba(255, 255, 255, 0.8);
+                }
+
+            #mainNav .navbar-nav > li.nav-item > a.nav-link {
+                color: #fff;
+            }
+
+                #mainNav .navbar-nav > li.nav-item > a.nav-link:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link:hover {
+                    color: rgba(255, 255, 255, 0.8);
+                }
+    }
+
+    @media (min-width: 992px) {
+        #mainNav {
+            transition: background-color 0.2s;
+            /* Force Hardware Acceleration in WebKit */
+            transform: translate3d(0, 0, 0);
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+        }
+
+            #mainNav.is-fixed {
+                /* when the user scrolls down, we hide the header right above the viewport */
+                position: fixed;
+                top: -83px;
+                transition: transform 0.2s;
+                border-bottom: 1px solid white;
+                background-color: rgba(255, 255, 255, 0.9);
+            }
+
+                #mainNav.is-fixed .navbar-brand {
+                    color: #212529;
+                }
+
+                    #mainNav.is-fixed .navbar-brand:focus, #mainNav.is-fixed .navbar-brand:hover {
+                        color: #0085A1;
+                    }
+
+                #mainNav.is-fixed .navbar-nav > li.nav-item > a {
+                    color: #212529;
+                }
+
+                    #mainNav.is-fixed .navbar-nav > li.nav-item > a:focus, #mainNav.is-fixed .navbar-nav > li.nav-item > a:hover {
+                        color: #0085A1;
+                    }
+
+            #mainNav.is-visible {
+                /* if the user changes the scrolling direction, we show the header */
+                transform: translate3d(0, 100%, 0);
+            }
+    }
+
+    footer {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
