Everything is working fine, except need to lockdown account creation.

--- a/RestaurantReviews/Views/Home/Index.cshtml
+++ b/RestaurantReviews/Views/Home/Index.cshtml
@@ -10,9 +10,7 @@
                             <h3 class="post-subtitle">@Html.DisplayFor(modelItem => item.Bullet)</h3>
                             </a>
                         <p class="post-meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on @Html.DisplayFor(modelItem => item.CreatedDate)
+                            Posted on @Html.DisplayFor(modelItem => item.CreatedDate)
                         </p>
                     </div>
                     <!-- Divider-->
