--- a/RestaurantReviews/Views/Reviews/Details.cshtml
+++ b/RestaurantReviews/Views/Reviews/Details.cshtml
@@ -1,96 +1,110 @@
 ﻿@model RestaurantReviews.Models.Review
 
 @{
-    ViewData["Title"] = "Details";
+	ViewData["Title"] = "Details";
 }
 
 <h2 class="post-title">@Html.DisplayFor(model => model.Name)</h2>
-
+<partial name="_EditCreatePartial" />
 <div>
-   <h3 class="post-subtitle" style="font-weight:300">@Html.DisplayFor(model => model.Bullet)</h3>
- 
-<table>
-  <tr>
-      <td valign="bottom"><h5>Rating: </h5></td>
-    <td>
-      <input value="@Html.DisplayFor(model => model.Rating)" class="rating-loading stars">
-    </td>
-    <td>Higher is better</td>
-  </tr>
-    <tr>
-      <td valign="bottom"><h5>Price: </h5></td>
-    <td>
-      <input value="@Html.DisplayFor(model => model.Price)" class="rating-loading stars">
-    </td>
-    <td>Higher is more expensive</td>
-  </tr>
-</table>
+	<h3 class="post-subtitle" style="font-weight:300">@Html.DisplayFor(model => model.Bullet)</h3>
 
-<table>
+	<table>
+		<tr>
+			<td valign="bottom"><h5>Rating: </h5></td>
+			<td>
+				<input value="@Html.DisplayFor(model => model.Rating)" class="rating-loading stars">
+			</td>
+			<td>Higher is better</td>
+		</tr>
+		<tr>
+			<td valign="bottom"><h5>Price: </h5></td>
+			<td>
+				<input value="@Html.DisplayFor(model => model.Price)" class="rating-loading stars">
+			</td>
+			<td>Higher is more expensive</td>
+		</tr>
+	</table>
 
-</table>
+	<table>
+	</table>
 
-    <hr />
+	<hr />
 
-            <article class="mb-4">
-            <div class="">
-                <div class="justify-content-center">
-                    <div class="">
-                        <p>@Html.DisplayFor(model => model.Text)</p>
-                        </div>
-                        </div>
-                        </div>
-                        </article>
+	<article class="mb-4">
+		<div class="">
+			<div class="justify-content-center">
+				<div class="">
+					<p>@Html.Raw(@Model.Text)</p>
+				</div>
+			</div>
+		</div>
+	</article>
+
+	<hr />
+	<h2 class="post-title">Comments</h2>
+	@if (Model.Comments == null || Model.Comments.Count == 0)
+	{
+
+	}
+	else
+	{
+
+		foreach (var comment in Model.Comments)
+		{
+			<blockquote class="blockquote mb-0">
+				<p class="mb-0 text-black text-decoration-none mt-0">@comment.Text</p>
+				<footer class="blockquote-footer">@comment.Name at @comment.Email</footer>
+			</blockquote>
+		}
 
 
+	}
+	<div class="row">
+    <div class="col-md-12">
+	<form  class="row g-3 needs-validation" novalidate method="post" enctype="multipart/form-data" asp-controller="Comments" asp-action="CreateFromReview">
+        <input type="hidden" id="reviewId" name="reviewId" value=@Model.Id />
+		<table>
+            <tr>
+                <td>Name:</td>
+                <td><input class="form-control" type="text" id="Name" name="Name" required/></td>
+            </tr>
+            <tr>
+                <td>Email:</td>
+                <td><input class="form-control" type="text" id="Email" name="Email" required/></td>
+            </tr>
+			<tr><td>Comment:</td>
+				<td>
+					<textarea  class="form-control" type="text" id="commentText" name="commentText" required></textarea>
+				</td></tr>
+            <tr>
+                <td></td>
+                <td><input type="submit" value="Save"/></td>
+            </tr>
+        </table>
+        <hr/>
 
-
- @*    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rating)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rating)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Text)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Text)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Bullet)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Bullet)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-    </dl>*@
+    </form>
+    </div>
 </div>
-@*<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>*@
+</div>
+<script>
+(function () {
+  'use strict'
+
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  var forms = document.querySelectorAll('.needs-validation')
+
+  // Loop over them and prevent submission
+  Array.prototype.slice.call(forms)
+    .forEach(function (form) {
+      form.addEventListener('submit', function (event) {
+        if (!form.checkValidity()) {
+          event.preventDefault()
+          event.stopPropagation()
+        }
+
+        form.classList.add('was-validated')
+      }, false)
+    })
+})()</script>
